--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="https://davidkrstevski.github.io/orthopaedie-savicic.github.io/style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header class="primary-header bg-primary-3">
@@ -29,7 +29,7 @@
               <li><a href="#kontakt">Kontakt</a></li>
             </ul>
           </nav>
-          <button class="button hide-on-mobile" data-type="inverted">Termin vereinbaren</button>
+          <a href="https://patient.latido.at/arzt/_Savicic" class="button hide-on-mobile" data-type="inverted" style="width: auto;">Termin vereinbaren</a>     
         </div>
       </div>
     </header>
@@ -172,10 +172,10 @@
           <div class="even-columns">
             <div>
               <p class="fs-h2 fw-bold">Vereinbare jetzt deinen Termin</p>
-              <p>Deutsch, Englisch, Serbo-kroatisch, Kenntnisse in Spanisch</p>
+              <p class="center-text-on-mobile" data-width="wide">Deutsch, Englisch, Serbo-kroatisch, Kenntnisse in Spanisch</p>
             </div>
-            <div>
-              <button class="button push-right" data-type="inverted">Termin vereinbaren</button>
+            <div class="center-text">
+              <a href="https://patient.latido.at/arzt/_Savicic" class="button push-right" data-type="inverted">Termin vereinbaren</a>  
             </div>
           </div>
         </div>
@@ -209,7 +209,7 @@
             <i class="fa-solid fa-location-dot"></i>
             <li>Amundsenstraße 44,<br>2231 Strasshof</li>
           </ul>
-          <div style="font-size: var(--fs-copyright);"><p>© Copyright 2022<br>Alle Rechte vorbehalten.</p></div>
+          <div class="fs-copyright">© Copyright 2022<br>Alle Rechte vorbehalten.</div>
         </div>
       </div>
     </footer>
