Add Sanja to mobile

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Ordination Dr. Sanja Savicic</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,700;1,500&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="style.css">
   </head>
@@ -39,7 +39,7 @@
         <div class="container">
           <div class="even-columns">
             <div class="flow" style="--flow-spacer: 1em">
-              <h1 class="title fs-h1 fw-bold center-text-on-mobile">Herzlich Willkommen in der Ordination<br>Dr. Sanja Savicic!</h1>
+              <h1 class="text-neutral-900 fs-h1 fw-bold center-text-on-mobile" style="padding-bottom: 5rem;">Herzlich Willkommen in der Ordination<br>Dr. Sanja Savicic!</h1>
               <p>Als Orthopädin, Kinderorthopädin und Traumatologin ist es mir wichtig, Ihnen die bestmögliche Betreuung anzubieten.</p>
               <p>Dabei lege ich meinen Schwerpunkt nicht nur auf die Erkrankungen des Bewegungsapparates im Erwachsenenalter, sondern auch im speziellen auf die orthopädischen Krankheitsbilder im Säuglings-, Kinder- und Jugendalter. Als zweifache Mutter sind mir die Unsicherheiten und Sorgen der Eltern ein großes Anliegen.</p>
               <p>Mein Ziel ist es, Ihnen ein weitgehend schmerzfreies Leben zu ermöglichen. Ich nehme mir für Sie Zeit und erkläre Ihnen ausführlich, welche Therapie ich Ihnen empfehle.</p>
@@ -47,7 +47,10 @@
               <p>Sie werden ausschließlich von mir betreut, keine Vertretungsärzte oder Lehrpraktikanten!</p>
               <p class="fw-bold">Ich hoffe, Sie bald in meiner Ordination begrüßen zu dürfen!</p>
             </div>
-            <div><img src="images/sanja" alt="Dr. Sanja Savicic"></div>
+            <div class="flow" style="--flow-spacer: 1em">
+              <img class="round-border center" src="images/sanja.jpg" alt="Dr. Sanja Savicic">
+              <p class="fw-medium-italic">„Man soll vor allem Mensch sein und dann erst Arzt“</p><p class="fw-medium">-Voltaire</p>
+            </div>
           </div>
         </div>
       </section>
@@ -84,6 +87,7 @@
                 <li><p>Mitglied der Gesellschaft für Orthopädie und orthopädische Chirurgie</p></li>
                 <li><p>Mitglied der Gesellschaft für Orthopädie und Traumatologie</p></li>
                 <li><p>Weiterbildung in manueller Medizin und kinderorthopädischer Fachrichtung</p></li>
+                <li class="fw-bold"><p>Deutsch, Englisch, Serbo-kroatisch, Kenntnisse in Spanisch</p></li>
               </ul>
             </div>    
             <div><img src="images/undraw_doctors.svg" alt="doctor-illustration"></div>      
@@ -122,17 +126,28 @@
               <iframe class="responsive-iframe border-200 bg-primary-3" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d165.8245076958825!2d16.64409920734024!3d48.3183872!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476ce2b5d892803b%3A0xb68aff3d9b7caa0b!2sOrdination%20Dr.%20Philipp%20Balga!5e0!3m2!1sde!2sat!4v1669474091700!5m2!1sde!2sat" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="center-text">
-              <div>
+              <div class="flow" style="--flow-spacer: 1em">
                 <h2 class="fs-h2 fw-bold">Kooperation</h2>
                 <ul role="list">
+                  <li class="fs-xl fw-bold text-primary-1">Ärztehaus Strasshof</li>
                   <li>Relota Bandagisterei<br>(www.bandagisterei-relota.at)</li>
-                  <li>Physiotherapeutin<br>Fr. Patrizia Mulik (0664/533-63-42)</li>
+                  <li>Physiotherapeutin Fr. Patrizia Mulik<br>(0664/533-63-42)</li>
                 </ul>
               </div>
             </div>
-          </div>
-        </div>
+          </div>               
+        </div> 
       </section>
+
+      <section class="bg-primary-1">
+        <div class="padding-horizontal-900">
+          <div class="bg-neutral-900 image-border-300 center" style="max-width: 500px;">
+            <a href="#"><img src="Sanja Savicic_Logopaket/Sanja Savicic_Bubbles/Sanja Savicic_Bubbles.svg"
+              alt="Bubble Türkis"></a> 
+          </div> 
+        </div> 
+      </section>
+      
 
       <section class="padding-block-900" id="leistungen">
         <div class="container">
@@ -172,7 +187,6 @@
           <div class="even-columns">
             <div>
               <p class="fs-h2 fw-bold">Vereinbare jetzt deinen Termin</p>
-              <p class="center-text-on-mobile" data-width="wide">Deutsch, Englisch, Serbo-kroatisch, Kenntnisse in Spanisch</p>
             </div>
             <div class="center-text">
               <a href="https://patient.latido.at/arzt/_Savicic" class="button push-right" data-type="inverted">Termin vereinbaren</a>  
@@ -184,7 +198,7 @@
 
     <footer class="padding-block-900" id="kontakt">
       <div class="container">
-        <div class="even-columns center center-text">
+        <div class="even-columns center-flex center-text">
           <!-- Social Media 
           <div>
             <a href="#"><img src="images/logo.png" alt="Logo"></a>
@@ -203,7 +217,7 @@
           </ul>         
           <ul role="list">
             <i class="fa-solid fa-envelope"></i>
-            <li>orthpaedie@savicic.at</li>
+            <li>orthopaedie@savicic.at</li>
           </ul>
           <ul role="list">
             <i class="fa-solid fa-location-dot"></i>
