Fix Sanja on Desktop

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
     </header>
 
     <main>
-      <section class="padding-block-900 wave">
+      <section class="padding-block-900-small-top wave">
         <div class="container">
           <div class="even-columns">
             <div class="flow" style="--flow-spacer: 1em">
-              <h1 class="text-neutral-900 fs-h1 fw-bold center-text-on-mobile" style="padding-bottom: 5rem;">Herzlich Willkommen in der Ordination<br>Dr. Sanja Savicic!</h1>
+              <h1 class="title text-neutral-900 fs-h1 fw-bold center-text-on-mobile">Herzlich Willkommen in der Ordination<br>Dr. Sanja Savicic!</h1>
               <p>Als Orthopädin, Kinderorthopädin und Traumatologin ist es mir wichtig, Ihnen die bestmögliche Betreuung anzubieten.</p>
               <p>Dabei lege ich meinen Schwerpunkt nicht nur auf die Erkrankungen des Bewegungsapparates im Erwachsenenalter, sondern auch im speziellen auf die orthopädischen Krankheitsbilder im Säuglings-, Kinder- und Jugendalter. Als zweifache Mutter sind mir die Unsicherheiten und Sorgen der Eltern ein großes Anliegen.</p>
               <p>Mein Ziel ist es, Ihnen ein weitgehend schmerzfreies Leben zu ermöglichen. Ich nehme mir für Sie Zeit und erkläre Ihnen ausführlich, welche Therapie ich Ihnen empfehle.</p>
@@ -49,7 +49,10 @@
             </div>
             <div class="flow" style="--flow-spacer: 1em">
               <img class="round-border center" src="images/sanja.jpg" alt="Dr. Sanja Savicic">
-              <p class="fw-medium-italic">„Man soll vor allem Mensch sein und dann erst Arzt“</p><p class="fw-medium">-Voltaire</p>
+              <div class="fs-quote center-text">
+                <p class="fw-medium-italic" data-width="wide">„Man soll vor allem Mensch sein und dann erst Arzt“</p>
+                <p class="fw-medium" data-width="wide">-Voltaire</p>
+              </div>             
             </div>
           </div>
         </div>
