--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="primary-header bg-primary-3">
       <div class="container">
         <div class="nav-wrapper">
-          <a href="#"><img src="Sanja Savicic_Logopaket/Sanja Savicic_Logo/Sanja Savicic_Logo.svg" alt="Logo"></a>
+          <a href="#"><img style="max-width:350px;" src="Sanja Savicic_Logopaket/Sanja Savicic_Logo/Sanja Savicic_Logo.svg" alt="Logo"></a>
           <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false">
             <i class="fa-solid fa-xmark icon-close" aria-hidden="true"></i>
             <i class="fa-solid fa-bars icon-menu" aria-hidden="true"></i>
@@ -38,7 +38,7 @@
       <section class="padding-block-900-small-top wave">
         <div class="container">
           <div class="even-columns">
-            <div class="flow" style="--flow-spacer: 1em">
+            <div class="flow center-on-mobile" style="--flow-spacer: 1em">
               <h1 class="title text-neutral-900 fs-h1 fw-bold center-text-on-mobile">Herzlich Willkommen in der Ordination<br>Dr. Sanja Savicic!</h1>
               <p>Als Orthopädin, Kinderorthopädin und Traumatologin ist es mir wichtig, Ihnen die bestmögliche Betreuung anzubieten.</p>
               <p>Dabei lege ich meinen Schwerpunkt nicht nur auf die Erkrankungen des Bewegungsapparates im Erwachsenenalter, sondern auch im speziellen auf die orthopädischen Krankheitsbilder im Säuglings-, Kinder- und Jugendalter. Als zweifache Mutter sind mir die Unsicherheiten und Sorgen der Eltern ein großes Anliegen.</p>
@@ -48,8 +48,8 @@
               <p class="fw-bold">Ich hoffe, Sie bald in meiner Ordination begrüßen zu dürfen!</p>
             </div>
             <div class="flow" style="--flow-spacer: 1em">
-              <img class="round-border center" src="images/sanja.jpg" alt="Dr. Sanja Savicic">
-              <div class="fs-quote center-text">
+              <img style="max-width: 70%;" class="round-border center" src="images/sanja.jpg" alt="Dr. Sanja Savicic">
+              <div class="center-text">
                 <p class="fw-medium-italic" data-width="wide">„Man soll vor allem Mensch sein und dann erst Arzt“</p>
                 <p class="fw-medium" data-width="wide">-Voltaire</p>
               </div>             
@@ -61,7 +61,7 @@
       <section class="padding-block-900 bg-primary-3" id="uebermich">
         <div class="container">
           <div class="even-columns change-order-on-desktop flow" style="--flow-spacer: 1em">
-            <div>
+            <div class="center-on-mobile">
               <h2 class="fs-h2 fw-bold center-text-on-mobile">Über mich</h2>
               <ul>
                 <li><p>Geboren am 04.09.1980 in Zagreb, verheiratet, Mutter zweier Töchter</p></li>
@@ -73,7 +73,7 @@
                 <li><p>2018 FÄ für Orthopädie und Traumatologie</p></li>
               </ul>
             </div>
-            <div><img src="images/undraw_online_cv.svg" alt="resume"></div>
+            <div><img class="center shrink-image-on-mobile" src="images/undraw_online_cv.svg" alt="resume"></div>
           </div>
         </div>
       </section>
@@ -81,7 +81,7 @@
       <section class="padding-block-900">
         <div class="container">
           <div class="even-columns flow" style="--flow-spacer: 1em">
-            <div>
+            <div class="center-on-mobile">
               <h2 class="fs-h2 fw-bold center-text-on-mobile">Qualifikationen</h2>
               <ul>
                 <li><p>Fachärztin für Orthopädie und Traumatologie</p></li>
@@ -93,7 +93,7 @@
                 <li class="fw-bold"><p>Deutsch, Englisch, Serbo-kroatisch, Kenntnisse in Spanisch</p></li>
               </ul>
             </div>    
-            <div><img src="images/undraw_doctors.svg" alt="doctor-illustration"></div>      
+            <div><img class="center shrink-image-on-mobile" src="images/undraw_doctors.svg" alt="doctor-illustration"></div>      
           </div>
         </div>
       </section>
@@ -122,6 +122,38 @@
         </div>
       </section>
 
+      <section class="padding-block-900" id="leistungen">
+        <div class="container">
+          <div class="flow" style="--flow-spacer: 1em">
+            <h2 class="fs-h2 fw-bold center-text">Leistungen</h2>
+              <ul>
+                <li><p data-width="wide">Hüft-Ultraschall laut Mutter-Kind-Pass in der 1. und 6. – 8. Lebenswoche (für diese Untersuchung kann ich auch gerne auf Anfrage zu Ihnen nach Hause kommen), sowie die orthopädische Untersuchung des Säuglings in der 7. – 9. Lebenswoche</p></li>
+                <li><p data-width="wide">Kinderorthopädische Untersuchung in jedem Lebensalter, ins. Fuß- und Wirbelsäulekontrollen sowie Achsfehlstellungen</p></li>
+                <li><p data-width="wide">Sämtliche akuten und chronischen Erkrankungen der großen und kleinen Gelenke</p></li>
+                <li><p data-width="wide">Skoliosetherapie</p></li>
+                <li><p data-width="wide">Schmerztherapie</p></li>
+              </ul>   
+          </div>
+          <div class="padding-block-700 flow" style="--flow-spacer: 1em">
+            <p data-width="wide" class="border-300 bg-primary-2">
+              Als Wahlärztin habe ich keinen Vertrag mit den Krankenkassen und somit werden meine Leistungen direkt verrechnet. Sie können bei Ihrer Krankenkasse eine Honorarnote einreichen und  bekommen einen Teil des Betrags rückerstattet.
+            </p>
+            <p data-width="wide">
+              Sie können in meiner Ordination bar oder mit Bankomat bezahlen.
+            </p>
+          </div>
+        </div>
+      </section> 
+
+      <section class="bg-primary-1">
+        <div class="padding-horizontal-900">
+          <div class="bg-neutral-900 image-border-300 center" style="max-width: 500px;">
+            <a href="#"><img src="Sanja Savicic_Logopaket/Sanja Savicic_Bubbles/Sanja Savicic_Bubbles.svg"
+              alt="Bubble Türkis"></a> 
+          </div> 
+        </div> 
+      </section>
+         
       <section class="padding-block-900">
         <div class="container">
           <div class="even-columns">
@@ -142,44 +174,11 @@
         </div> 
       </section>
 
-      <section class="bg-primary-1">
-        <div class="padding-horizontal-900">
-          <div class="bg-neutral-900 image-border-300 center" style="max-width: 500px;">
-            <a href="#"><img src="Sanja Savicic_Logopaket/Sanja Savicic_Bubbles/Sanja Savicic_Bubbles.svg"
-              alt="Bubble Türkis"></a> 
-          </div> 
-        </div> 
-      </section>
-      
-
-      <section class="padding-block-900" id="leistungen">
-        <div class="container">
-          <div class="flow" style="--flow-spacer: 1em">
-            <h2 class="fs-h2 fw-bold center-text">Leistungen</h2>
-              <ul>
-                <li><p data-width="wide">Hüft-Ultraschall laut Mutter-Kind-Pass in der 1. und 6. -8. Lebenswoche (für diese Untersuchung kann ich auch gerne auf Anfrage zu Ihnen nach Hause kommen), sowie die orthopädische Untersuchung des Säuglings in der 7.-9. Lebenswoche</p></li>
-                <li><p data-width="wide">Kinderorthopädische Untersuchung in jedem Lebensalter, ins. Fuß- und Wirbelsäulekontrollen sowie Achsfehlstellungen</p></li>
-                <li><p data-width="wide">Sämtliche akuten und chronischen Erkrankungen der großen und kleinen Gelenke</p></li>
-                <li><p data-width="wide">Skoliosetherapie</p></li>
-                <li><p data-width="wide">Schmerztherapie</p></li>
-              </ul>   
-          </div>
-          <div class="padding-block-700 flow" style="--flow-spacer: 1em">
-            <p data-width="wide" class="border-300 bg-primary-2">
-              Als Wahlärztin habe ich keinen Vertrag mit den Krankenkassen und somit werden meine Leistungen direkt verrechnet. Sie können bei Ihrer Krankenkasse eine Honorarnote einreichen und  bekommen einen Teil des Betrags rückerstattet.
-            </p>
-            <p data-width="wide">
-              Sie können in meiner Ordination bar oder mit Bankomat bezahlen.
-            </p>
-          </div>
-        </div>
-      </section>    
-
       <section class="padding-block-900 bg-primary-3">
         <div class="container flow center-text" style="--flow-spacer: 1em">
           <h2 class="fs-h2 fw-bold">Ordinationszeit</h2>
           <ul role='list'>
-            <li>Dientstag 8-12, 17-19 Uhr</li>
+            <li>Dientstag 8:00 – 12:00 & 17:00 – 19:00 Uhr</li>
             <li class="fw-medium">Ich bitte Sie, bei Verhinderung mindestens 24 Stunden vorher abzusagen. Ansonsten erlaube ich mir ein Ausfallshonorar zu verrechnen.</li>
           </ul>
         </div>
@@ -189,7 +188,7 @@
         <div class="container">
           <div class="even-columns">
             <div>
-              <p class="fs-h2 fw-bold">Vereinbare jetzt deinen Termin</p>
+              <p class="fs-h2 fw-bold text-neutral-900 center-text-on-mobile">Vereinbare jetzt deinen Termin</p>
             </div>
             <div class="center-text">
               <a href="https://patient.latido.at/arzt/_Savicic" class="button push-right" data-type="inverted">Termin vereinbaren</a>  
@@ -215,16 +214,16 @@
           <a href="#"><img src="Sanja Savicic_Logopaket/Sanja Savicic_Logo/Sanja Savicic_Logo.svg" alt="Logo"></a>
           <ul role="list">
             <li><i class="fa-solid fa-phone"></i></li>
-            <li>0664/7504-2109</li>
-            <li>Mo - Fr 9-12 Uhr</li>
+            <li><a href="tel:066475042109" class="text-neutral-100">0664/7504-2109</a></li>
+            <li>Mo – Fr | 9:00 – 12:00 Uhr</li>
           </ul>         
           <ul role="list">
             <i class="fa-solid fa-envelope"></i>
-            <li>orthopaedie@savicic.at</li>
+            <li><a href="mailto:orthopaedie@savicic.at" class="text-neutral-100">orthopaedie@savicic.at</a> </li>
           </ul>
           <ul role="list">
             <i class="fa-solid fa-location-dot"></i>
-            <li>Amundsenstraße 44,<br>2231 Strasshof</li>
+            <li><a href="https://www.google.com/maps?ll=48.318387,16.644236&z=19&t=m&hl=de&gl=AT&mapclient=embed&cid=13153606301755681291" class="text-neutral-100">Amundsenstraße 44,<br>2231 Strasshof</a></li>
           </ul>
           <div class="fs-copyright">© Copyright 2022<br>Alle Rechte vorbehalten.</div>
         </div>
