--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <li><p>2018 FÄ für Orthopädie und Traumatologie</p></li>
               </ul>
             </div>
-            <div><img class="center shrink-image-on-mobile" src="images/undraw_online_cv.svg" alt="resume"></div>
+            <div><img class="center shrink-image-on-mobile-70" src="images/undraw_online_cv.svg" alt="resume"></div>
           </div>
         </div>
       </section>
@@ -93,7 +93,7 @@
                 <li class="fw-bold"><p>Deutsch, Englisch, Serbo-kroatisch, Kenntnisse in Spanisch</p></li>
               </ul>
             </div>    
-            <div><img class="center shrink-image-on-mobile" src="images/undraw_doctors.svg" alt="doctor-illustration"></div>      
+            <div><img class="center shrink-image-on-mobile-70" src="images/undraw_doctors.svg" alt="doctor-illustration"></div>      
           </div>
         </div>
       </section>
@@ -136,7 +136,7 @@
           </div>
           <div class="padding-block-700 flow" style="--flow-spacer: 1em">
             <p data-width="wide" class="border-300 bg-primary-2">
-              Als Wahlärztin habe ich keinen Vertrag mit den Krankenkassen und somit werden meine Leistungen direkt verrechnet. Sie können bei Ihrer Krankenkasse eine Honorarnote einreichen und  bekommen einen Teil des Betrags rückerstattet.
+              Als Wahlärztin habe ich keinen Vertrag mit den Krankenkassen und somit werden meine Leistungen direkt verrechnet. Sie können bei Ihrer Krankenkasse eine Honorarnote einreichen und bekommen einen Teil des Betrags rückerstattet.
             </p>
             <p data-width="wide">
               Sie können in meiner Ordination bar oder mit Bankomat bezahlen.
@@ -198,7 +198,7 @@
       </section>
     </main>
 
-    <footer class="padding-block-900" id="kontakt">
+    <footer class="padding-block-700" id="kontakt">
       <div class="container">
         <div class="even-columns center-flex center-text">
           <!-- Social Media 
@@ -211,7 +211,7 @@
             </ul>
           </div>
           -->
-          <a href="#"><img src="Sanja Savicic_Logopaket/Sanja Savicic_Logo/Sanja Savicic_Logo.svg" alt="Logo"></a>
+          <a href="#" class="remove-logo"><img class="center-on-mobile shrink-image-on-mobile-300" src="Sanja Savicic_Logopaket/Sanja Savicic_Logo/Sanja Savicic_Logo.svg" alt="Logo"></a>
           <ul role="list">
             <li><i class="fa-solid fa-phone"></i></li>
             <li><a href="tel:066475042109" class="text-neutral-100">0664/7504-2109</a></li>
