--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <header class="primary-header bg-primary-3">
+    <header class="primary-header bg-primary-3" id="top">
       <div class="container">
         <div class="nav-wrapper">
-          <a href="#"><img style="max-width:350px;" src="Sanja Savicic_Logopaket/Sanja Savicic_Logo/Sanja Savicic_Logo.svg" alt="Logo"></a>
+          <a href=""><img style="max-width:350px;" src="Sanja Savicic_Logopaket/Sanja Savicic_Logo/Sanja Savicic_Logo.svg" alt="Logo"></a>
           <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false">
             <i class="fa-solid fa-xmark icon-close" aria-hidden="true"></i>
             <i class="fa-solid fa-bars icon-menu" aria-hidden="true"></i>
@@ -134,7 +134,7 @@
                 <li><p data-width="wide">Schmerztherapie</p></li>
               </ul>   
           </div>
-          <div class="padding-block-700 flow" style="--flow-spacer: 1em">
+          <div class="padding-block-300 flow" style="--flow-spacer: 1em">
             <p data-width="wide" class="border-300 bg-primary-2">
               Als Wahlärztin habe ich keinen Vertrag mit den Krankenkassen und somit werden meine Leistungen direkt verrechnet. Sie können bei Ihrer Krankenkasse eine Honorarnote einreichen und bekommen einen Teil des Betrags rückerstattet.
             </p>
@@ -198,9 +198,9 @@
       </section>
     </main>
 
-    <footer class="padding-block-700" id="kontakt">
+    <footer class="padding-block-300" id="kontakt">
       <div class="container">
-        <div class="even-columns center-flex center-text">
+        <div class="even-columns center-flex center-text grid-children">
           <!-- Social Media 
           <div>
             <a href="#"><img src="images/logo.png" alt="Logo"></a>
@@ -211,21 +211,26 @@
             </ul>
           </div>
           -->
-          <a href="#" class="remove-logo"><img class="center-on-mobile shrink-image-on-mobile-300" src="Sanja Savicic_Logopaket/Sanja Savicic_Logo/Sanja Savicic_Logo.svg" alt="Logo"></a>
-          <ul role="list">
-            <li><i class="fa-solid fa-phone"></i></li>
-            <li><a href="tel:066475042109" class="text-neutral-100">0664/7504-2109</a></li>
-            <li>Mo – Fr | 9:00 – 12:00 Uhr</li>
-          </ul>         
-          <ul role="list">
+          <a href="#top" class="remove-logo"><img class="center-on-mobile shrink-image-on-mobile-300" src="Sanja Savicic_Logopaket/Sanja Savicic_Logo/Sanja Savicic_Logo.svg" alt="Logo"></a>
+          <div>
+            <i class="fa-solid fa-phone"></i>
+            <div>
+              <a href="tel:066475042109" class="text-hover text-neutral-100">0664/7504-2109</a>
+              <p data-width="wide">Mo – Fr | 9:00 – 12:00 Uhr</p>
+            </div> 
+          </div>         
+          <div role="list">
             <i class="fa-solid fa-envelope"></i>
-            <li><a href="mailto:orthopaedie@savicic.at" class="text-neutral-100">orthopaedie@savicic.at</a> </li>
-          </ul>
-          <ul role="list">
+            <a href="mailto:orthopaedie@savicic.at" class="text-hover text-neutral-100">orthopaedie@savicic.at</a>
+          </div>
+          <div role="list">
             <i class="fa-solid fa-location-dot"></i>
-            <li><a href="https://www.google.com/maps?ll=48.318387,16.644236&z=19&t=m&hl=de&gl=AT&mapclient=embed&cid=13153606301755681291" class="text-neutral-100">Amundsenstraße 44,<br>2231 Strasshof</a></li>
-          </ul>
-          <div class="fs-copyright">© Copyright 2022<br>Alle Rechte vorbehalten.</div>
+            <a href="https://www.google.com/maps?ll=48.318387,16.644236&z=19&t=m&hl=de&gl=AT&mapclient=embed&cid=13153606301755681291" class="text-hover text-neutral-100">Amundsenstraße 44,<br>2231 Strasshof</a>
+          </div>
+          <div role="list">
+            <a href="impressum.html" class="text-hover fs-copyright text-neutral-100">Impressum</a>
+            <div class="fs-copyright">© Copyright 2022<br>Alle Rechte vorbehalten.</div>
+          </div>
         </div>
       </div>
     </footer>
