Update Bilder und Impressum

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <p class="fw-bold">Ich hoffe, Sie bald in meiner Ordination begrüßen zu dürfen!</p>
             </div>
             <div class="flow" style="--flow-spacer: 1em">
-              <img style="max-width: 70%;" class="round-border center" src="images/sanja.jpg" alt="Dr. Sanja Savicic">
+              <img style="max-width: 70%;" class="round-border center" src="images/profilbild1_resized.jpg" alt="Dr. Sanja Savicic">
               <div class="center-text">
                 <p class="fw-medium-italic" data-width="wide">„Man soll vor allem Mensch sein und dann erst Arzt“</p>
                 <p class="fw-medium" data-width="wide">-Voltaire</p>
@@ -99,16 +99,16 @@
       </section>
       
       <section class="padding-block-900 bg-primary-2" id="ordination">
-        <div class="container flow" style="--flow-spacer: 1em">
+        <div class="container">
           <h2 class="fs-h2 fw-bold center-text">Ordination</h2>
           <div class="carousel">
             <div class="swiper">
               <!-- Additional required wrapper -->
               <div class="swiper-wrapper">
                 <!-- Slides -->
-                <div class="swiper-slide"><img src="images/Dog.jpg" alt="Dog1"></div>
-                <div class="swiper-slide"><img src="images/Dog.jpg" alt="Dog2"></div>
-                <div class="swiper-slide"><img src="images/Dog.jpg" alt="Dog3"></div>
+                <div class="swiper-slide"><img src="images/ordination2.jpg" alt="Dog2"></div>
+                <div class="swiper-slide"><img src="images/ordination3.jpg" alt="Dog3"></div>
+                <div class="swiper-slide"><img src="images/ordination4.jpg" alt="Dog3"></div>
               </div>
               <!-- If we need pagination 
               <div class="swiper-pagination"></div>
@@ -215,20 +215,20 @@
           <div>
             <i class="fa-solid fa-phone"></i>
             <div>
-              <a href="tel:066475042109" class="text-hover text-neutral-100">0664/7504-2109</a>
+              <a href="tel:066475042109" class="text-hover-primary-1 text-neutral-100">0664/7504-2109</a>
               <p data-width="wide">Mo – Fr | 9:00 – 12:00 Uhr</p>
             </div> 
           </div>         
           <div role="list">
             <i class="fa-solid fa-envelope"></i>
-            <a href="mailto:orthopaedie@savicic.at" class="text-hover text-neutral-100">orthopaedie@savicic.at</a>
+            <a href="mailto:orthopaedie@savicic.at" class="text-hover-primary-1 text-neutral-100">orthopaedie@savicic.at</a>
           </div>
           <div role="list">
             <i class="fa-solid fa-location-dot"></i>
             <a href="https://www.google.com/maps?ll=48.318387,16.644236&z=19&t=m&hl=de&gl=AT&mapclient=embed&cid=13153606301755681291" class="text-hover text-neutral-100">Amundsenstraße 44,<br>2231 Strasshof</a>
           </div>
           <div role="list">
-            <a href="impressum.html" class="text-hover fs-copyright text-neutral-100">Impressum</a>
+            <a href="impressum.html" class="text-hover-primary-1 fs-copyright text-neutral-100">Impressum</a>
             <div class="fs-copyright">© Copyright 2022<br>Alle Rechte vorbehalten.</div>
           </div>
         </div>
