--- a/impressum.html
+++ b/impressum.html
@@ -21,7 +21,7 @@
             <i class="fa-solid fa-bars icon-menu" aria-hidden="true"></i>
             <span class="visually-hidden">Menu</span>
           </button>
-          <nav class="primary-navigation" id="primary-navigation">
+          <nav class="primary-navigation">
             <ul role="list" class="nav-list">
               <li><a href="index.html#uebermich">Über mich</a></li>
               <li><a href="index.html#ordination">Ordination</a></li>
@@ -38,20 +38,18 @@
       <section class="padding-block-900">
         <div class="container">
           <div>
-            <div class="flow center-text" style="--flow-spacer: 2em">
+            <div class="flow center-text" style="--flow-spacer: 1em">
               <h1 class="fs-h1 fw-bold">Impressum</h1>
-              <p data-width="wide">Als Orthopädin, Kinderorthopädin und Traumatologin ist es mir wichtig, Ihnen die bestmögliche Betreuung anzubieten.</p>
-              <p data-width="wide">Dabei lege ich meinen Schwerpunkt nicht nur auf die Erkrankungen des Bewegungsapparates im Erwachsenenalter, sondern auch im speziellen auf die orthopädischen Krankheitsbilder im Säuglings-, Kinder- und Jugendalter. Als zweifache Mutter sind mir die Unsicherheiten und Sorgen der Eltern ein großes Anliegen.</p>
-              <p data-width="wide">Mein Ziel ist es, Ihnen ein weitgehend schmerzfreies Leben zu ermöglichen. Ich nehme mir für Sie Zeit und erkläre Ihnen ausführlich, welche Therapie ich Ihnen empfehle.</p>
-              <p data-width="wide">Des Weiteren biete ich Ihnen eine rasche Terminvergabe und kurze Wartezeiten in einem angenehmen Ambiente an.</p>
-              <p data-width="wide">Sie werden ausschließlich von mir betreut, keine Vertretungsärzte oder Lehrpraktikanten!</p>
+              <p data-width="wide">Name: Dr. Sanja Savicic</p>
+              <p data-width="wide">Unterneh.: Wahlarztordination</p>
+              <p data-width="wide">Sitz: Strasshof</p>
               <p class="fw-bold" data-width="wide">Ich hoffe, Sie bald in meiner Ordination begrüßen zu dürfen!</p>
             </div>
           </div>
         </div>
       </section>
       
-      <section>
+      <section class="padding-block-900-small-top">
         <div class="container">
           <a href="#"><img class="center" style="max-width:350px;" src="Sanja Savicic_Logopaket/Sanja Savicic_Bubbles/Sanja Savicic_Bubbles.svg" alt="Logo"></a>
         </div>
@@ -59,24 +57,24 @@
 
     </main>
 
-    <footer class="padding-block-300 bg-primary-3" id="kontakt">
+    <footer class="padding-block-300 bg-primary-3">
       <div class="container">
         <div class="even-columns center-flex center-text grid-children">
-          <a href="#top" class="remove-logo"><img class="center-on-mobile shrink-image-on-mobile-300" src="Sanja Savicic_Logopaket/Sanja Savicic_Logo/Sanja Savicic_Logo.svg" alt="Logo"></a>
+          <a href="index.html" class="remove-logo"><img class="center-on-mobile shrink-image-on-mobile-300" src="Sanja Savicic_Logopaket/Sanja Savicic_Logo/Sanja Savicic_Logo.svg" alt="Logo"></a>
           <div>
             <i class="fa-solid fa-phone"></i>
             <div>
-              <a href="tel:066475042109" class="text-hover text-neutral-100">0664/7504-2109</a>
+              <a href="tel:066475042109" class="text-hover-neutral-900 text-neutral-100">0664/7504-2109</a>
               <p data-width="wide">Mo – Fr | 9:00 – 12:00 Uhr</p>
             </div> 
           </div>         
           <div role="list">
             <i class="fa-solid fa-envelope"></i>
-            <a href="mailto:orthopaedie@savicic.at" class="text-hover text-neutral-100">orthopaedie@savicic.at</a>
+            <a href="mailto:orthopaedie@savicic.at" class="text-hover-neutral-900 text-neutral-100">orthopaedie@savicic.at</a>
           </div>
           <div role="list">
             <i class="fa-solid fa-location-dot"></i>
-            <a href="https://www.google.com/maps?ll=48.318387,16.644236&z=19&t=m&hl=de&gl=AT&mapclient=embed&cid=13153606301755681291" class="text-hover text-neutral-100">Amundsenstraße 44,<br>2231 Strasshof</a>
+            <a href="https://www.google.com/maps?ll=48.318387,16.644236&z=19&t=m&hl=de&gl=AT&mapclient=embed&cid=13153606301755681291" class="text-hover-neutral-900 text-neutral-100">Amundsenstraße 44,<br>2231 Strasshof</a>
           </div>
           <div role="list">
             <div class="fs-copyright">© Copyright 2022<br>Alle Rechte vorbehalten.</div>
