--- a/index.html
+++ b/index.html
@@ -219,15 +219,15 @@
               <p data-width="wide">Mo – Fr | 9:00 – 12:00 Uhr</p>
             </div> 
           </div>         
-          <div role="list">
+          <div>
             <i class="fa-solid fa-envelope"></i>
             <a href="mailto:orthopaedie@savicic.at" class="text-hover-primary-1 text-neutral-100">orthopaedie@savicic.at</a>
           </div>
-          <div role="list">
+          <div>
             <i class="fa-solid fa-location-dot"></i>
             <a href="https://www.google.com/maps?ll=48.318387,16.644236&z=19&t=m&hl=de&gl=AT&mapclient=embed&cid=13153606301755681291" class="text-hover text-neutral-100">Amundsenstraße 44,<br>2231 Strasshof</a>
           </div>
-          <div role="list">
+          <div>
             <a href="impressum.html" class="text-hover-primary-1 fs-copyright text-neutral-100">Impressum</a>
             <div class="fs-copyright">© Copyright 2022<br>Alle Rechte vorbehalten.</div>
           </div>
