--- a/impressum.html
+++ b/impressum.html
@@ -37,14 +37,29 @@
     <main>
       <section class="padding-block-900">
         <div class="container">
-          <div>
-            <div class="flow center-text" style="--flow-spacer: 1em">
-              <h1 class="fs-h1 fw-bold">Impressum</h1>
-              <p data-width="wide">Name: Dr. Sanja Savicic</p>
-              <p data-width="wide">Unterneh.: Wahlarztordination</p>
-              <p data-width="wide">Sitz: Strasshof</p>
-              <p class="fw-bold" data-width="wide">Ich hoffe, Sie bald in meiner Ordination begrüßen zu dürfen!</p>
+          <div class="flow-no-p" style="--flow-spacer: 1em">
+            <h1 class="fs-h1 fw-bold center-text">Impressum</h1>
+            <div>Information gemäß §5 E-Commerce Gesetz und Offenlegung gemäß §25 Mediengesetz.</div>
+            <div>
+              <p data-width="wide" class="test">Wahlarztordination Dr. Sanja Savicic</p>
+              <p data-width="wide">Fachärztin für Orthopädie und Traumatologie</p>
             </div>
+            <div>
+              <p data-width="wide">Amundsenstraße 44</p>
+              <p data-width="wide">2231 Strasshof an der Nordbahn</p>
+            </div>
+            <div>
+              <p data-width="wide">Telefon: +43 664/7504-2109</p>
+              <p data-width="wide">E-Mail: orthopaedie@savicic.at</p>
+            </div>
+            <div>
+              <h3 class="fs-h3 fw-bold">Haftungsausschluss</h3>
+              <p data-width="wide">Alle Informationen dieser Webseite werden ohne Anspruch auf Richtigkeit, Vollständigkeit oder Aktualität zur Verfügung gestellt. Das Dokument, jede Kopie des Dokuments oder Teile davon, dürfen nicht ohne schriftliche Zustimmung des Betreibers verändert werden. Für Internetseiten Dritter, auf die dieses Angebot durch das sogenannte Netzwerk verweist, tragen die jeweiligen Anbieter die Verantwortung. Der Betreiber ist für den Inhalt solcher Seiten Dritter nicht verantwortlich. Des Weiteren kann die Webseite ohne Wissen des Betreibers von anderen Seiten durch das sog. Netzwerk angelinkt werden. Der Betreiber übernimmt keine Verantwortung für Inhalt, Darstellungen oder jegliche Verbindung zu dieser Webseite in Webseiten Dritter. Für fremde Inhalte ist der Betreiber nur dann verantwortlich, wenn von Ihnen (d.h. auch von einem rechtswidrigen oder strafbaren Inhalt) positive Kenntnis vorliegt und es technisch möglich und zumutbar ist, deren Nutzung zu verhindern. Der Betreiber ist nach dem E-Commerce-Gesetz jedoch nicht verpflichtet, die fremden Inhalte ständig zu überprüfen.
+              </p>
+            </div>
+            
+            <div><p data-width="wide">Soweit nicht anders angegeben, liegt das Copyright für Texte, Abbildungen und Design dieser Webseite bei Dr. Sanja Savicic.</p></div>
+            <div><p class="fw-bold" data-width="wide">Verantwortlich für den Inhalt: Dr. Sanja Savicic</p></div>
           </div>
         </div>
       </section>
@@ -68,15 +83,15 @@
               <p data-width="wide">Mo – Fr | 9:00 – 12:00 Uhr</p>
             </div> 
           </div>         
-          <div role="list">
+          <div>
             <i class="fa-solid fa-envelope"></i>
             <a href="mailto:orthopaedie@savicic.at" class="text-hover-neutral-900 text-neutral-100">orthopaedie@savicic.at</a>
           </div>
-          <div role="list">
+          <div>
             <i class="fa-solid fa-location-dot"></i>
             <a href="https://www.google.com/maps?ll=48.318387,16.644236&z=19&t=m&hl=de&gl=AT&mapclient=embed&cid=13153606301755681291" class="text-hover-neutral-900 text-neutral-100">Amundsenstraße 44,<br>2231 Strasshof</a>
           </div>
-          <div role="list">
+          <div>
             <div class="fs-copyright">© Copyright 2022<br>Alle Rechte vorbehalten.</div>
           </div>
         </div>
