--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
       </div>
     </footer>
 
-    <script type="module" src="https://davidkrstevski.github.io/orthopaedie-savicic.github.io/main.js"></script>
+    <script type="module" src="https://orthopaedie-savicic.at/main.js"></script>
     <script src="https://kit.fontawesome.com/74e303cdc4.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   </body>
