--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="Sanja Savicic_Logopaket/Bubbles Einzeln/Sanja Savicic_Bubbles_Lila/Sanja Savicic_Bubbles_Lila.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ordination Dr. Sanja Savicic</title>
+    <title>Ordination Dr. Sanja Savicic | Strasshof | Kinderorthopädie</title>
+    <meta name="description" content="Die Ordination Dr. Sanja Savicic befindet sich im Ärztehaus Strasshof und wird von der Fachärztin für Orthopädie und Traumatologie Dr. Sanja Savicic geführt.">
+    <meta name="author" content="Sanja Savicic">
+    <meta property="og:title" content="Ordination Dr. Sanja Savicic">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://orthopaedie-savicic.at/">
+    <meta property="og:description" content="Die Ordination von Dr. Sanja Savicic, Fachärztin für Orthopädie und Traumatologie">
+    <meta property="og:image" content="Sanja Savicic_Logopaket/Sanja Savicic_Logo/Sanja Savicic_Logo.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,700;1,500&display=swap" rel="stylesheet"> 
