--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Ordination Dr. Sanja Savicic | Strasshof | Kinderorthopädie</title>
     <meta name="description" content="Die Ordination Dr. Sanja Savicic befindet sich im Ärztehaus Strasshof und wird von der Fachärztin für Orthopädie und Traumatologie Dr. Sanja Savicic geführt.">
     <meta name="author" content="Sanja Savicic">
-    <meta property="og:title" content="Ordination Dr. Sanja Savicic">
+    <meta property="og:title" content="Ordination Dr. Sanja Savicic | Strasshof | Kinderorthopädie">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://orthopaedie-savicic.at/">
     <meta property="og:description" content="Die Ordination von Dr. Sanja Savicic, Fachärztin für Orthopädie und Traumatologie">
