--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="Sanja Savicic_Logopaket/Bubbles Einzeln/Sanja Savicic_Bubbles_Lila/Sanja Savicic_Bubbles_Lila.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ordination Dr. Sanja Savicic | Strasshof | Kinderorthopädie</title>
-    <meta name="description" content="Die Ordination Dr. Sanja Savicic befindet sich im Ärztehaus Strasshof und wird von der Fachärztin für Orthopädie und Traumatologie Dr. Sanja Savicic geführt.">
+    <title>Ordination Dr. Sanja Savicic | Strasshof | Kinderorthopädie | Hüftultraschall</title>
+    <meta name="description" content="Die Ordination Dr. Sanja Savicic befindet sich im Ärztehaus Strasshof und wird von der Fachärztin für Orthopädie und Traumatologie Dr. Sanja Savicic geführt. Die Orthopädie fungiert auch als Kinderorthopädie und bietet unter anderem Hüftultraschall an.">
     <meta name="author" content="Sanja Savicic">
-    <meta property="og:title" content="Ordination Dr. Sanja Savicic | Strasshof | Kinderorthopädie">
+    <meta property="og:title" content="Ordination Dr. Sanja Savicic | Strasshof | Kinderorthopädie | Hüftultraschall">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://orthopaedie-savicic.at/">
     <meta property="og:description" content="Die Ordination von Dr. Sanja Savicic, Fachärztin für Orthopädie und Traumatologie">
@@ -134,7 +134,7 @@
           <div class="flow" style="--flow-spacer: 1em">
             <h2 class="fs-h2 fw-bold center-text">Leistungen</h2>
               <ul>
-                <li><p data-width="wide">Hüft-Ultraschall laut Mutter-Kind-Pass in der 1. und 6. – 8. Lebenswoche (für diese Untersuchung kann ich auch gerne auf Anfrage zu Ihnen nach Hause kommen), sowie die orthopädische Untersuchung des Säuglings in der 7. – 9. Lebenswoche</p></li>
+                <li><p data-width="wide">Hüftultraschall laut Mutter-Kind-Pass in der 1. und 6. – 8. Lebenswoche (für diese Untersuchung kann ich auch gerne auf Anfrage zu Ihnen nach Hause kommen), sowie die orthopädische Untersuchung des Säuglings in der 7. – 9. Lebenswoche</p></li>
                 <li><p data-width="wide">Kinderorthopädische Untersuchung in jedem Lebensalter, ins. Fuß- und Wirbelsäulekontrollen sowie Achsfehlstellungen</p></li>
                 <li><p data-width="wide">Sämtliche akuten und chronischen Erkrankungen der großen und kleinen Gelenke</p></li>
                 <li><p data-width="wide">Skoliosetherapie</p></li>
