--- a/index.html
+++ b/index.html
@@ -18,17 +18,18 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="style.css">
   </head>
+
   <body>
     <header class="primary-header bg-primary-3" id="top">
       <div class="container">
         <div class="nav-wrapper">
-          <a href=""><img style="max-width:350px;" src="Sanja Savicic_Logopaket/Sanja Savicic_Logo/Sanja Savicic_Logo.svg" alt="Logo"></a>
-          <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false">
+          <a href="" class="scroll-anim-opacity-0 scroll-anim-left"><img style="max-width:350px;" src="Sanja Savicic_Logopaket/Sanja Savicic_Logo/Sanja Savicic_Logo.svg" alt="Logo"></a>
+          <button class="mobile-nav-toggle scroll-anim-opacity-0 scroll-anim-down" aria-controls="primary-navigation" aria-expanded="false">
             <i class="fa-solid fa-xmark icon-close" aria-hidden="true"></i>
             <i class="fa-solid fa-bars icon-menu" aria-hidden="true"></i>
             <span class="visually-hidden">Menu</span>
           </button>
-          <nav class="primary-navigation" id="primary-navigation">
+          <nav class="primary-navigation">
             <ul role="list" class="nav-list">
               <li><a href="#uebermich">Über mich</a></li>
               <li><a href="#ordination">Ordination</a></li>
@@ -36,7 +37,7 @@
               <li><a href="#kontakt">Kontakt</a></li>
             </ul>
           </nav>
-          <a href="https://patient.latido.at/arzt/_Savicic" class="button hide-on-mobile" data-type="inverted" style="width: auto;">Termin vereinbaren</a>     
+          <a href="https://patient.latido.at/arzt/_Savicic" class="button hide-on-mobile grow-transition-10" data-type="inverted" style="width: auto;">Termin vereinbaren</a>     
         </div>
       </div>
     </header>
@@ -46,7 +47,7 @@
         <div class="container">
           <div class="even-columns">
             <div class="flow center-on-mobile" style="--flow-spacer: 1em">
-              <h1 class="title text-neutral-900 fs-h1 fw-bold center-text-on-mobile">Herzlich Willkommen in der Ordination<br>Dr. Sanja Savicic!</h1>
+              <h1 class="title text-neutral-900 fs-h1 fw-bold center-text-on-mobile scroll-anim-opacity-0 scroll-anim-left">Herzlich Willkommen in der Ordination<br>Dr. Sanja Savicic!</h1>
               <p>Als Orthopädin, Kinderorthopädin und Traumatologin ist es mir wichtig, Ihnen die bestmögliche Betreuung anzubieten.</p>
               <p>Dabei lege ich meinen Schwerpunkt nicht nur auf die Erkrankungen des Bewegungsapparates im Erwachsenenalter, sondern auch im speziellen auf die orthopädischen Krankheitsbilder im Säuglings-, Kinder- und Jugendalter. Als zweifache Mutter sind mir die Unsicherheiten und Sorgen der Eltern ein großes Anliegen.</p>
               <p>Mein Ziel ist es, Ihnen ein weitgehend schmerzfreies Leben zu ermöglichen. Ich nehme mir für Sie Zeit und erkläre Ihnen ausführlich, welche Therapie ich Ihnen empfehle.</p>
@@ -55,11 +56,12 @@
               <p class="fw-bold">Ich hoffe, Sie bald in meiner Ordination begrüßen zu dürfen!</p>
             </div>
             <div class="flow" style="--flow-spacer: 1em">
-              <img style="max-width: 70%;" class="round-border center" src="images/profilbild1_resized.jpg" alt="Dr. Sanja Savicic">
-              <div class="center-text">
+              <a href="#uebermich"><img style="max-width: 70%;" class="round-border center grow-transition-5" src="images/profilbild1_resized.jpg" alt="Dr. Sanja Savicic">
+              </a> 
+              <div class="center-text scroll-anim-opacity-0 scroll-anim-right">
                 <p class="fw-medium-italic" data-width="wide">„Man soll vor allem Mensch sein und dann erst Arzt“</p>
                 <p class="fw-medium" data-width="wide">-Voltaire</p>
-              </div>             
+              </div>                
             </div>
           </div>
         </div>
@@ -68,7 +70,7 @@
       <section class="padding-block-900 bg-primary-3" id="uebermich">
         <div class="container">
           <div class="even-columns change-order-on-desktop flow" style="--flow-spacer: 1em">
-            <div class="center-on-mobile">
+            <div class="center-on-mobile scroll-anim-opacity-0 scroll-anim-right">
               <h2 class="fs-h2 fw-bold center-text-on-mobile">Über mich</h2>
               <ul>
                 <li><p>Geboren am 04.09.1980 in Zagreb, verheiratet, Mutter zweier Töchter</p></li>
@@ -80,7 +82,7 @@
                 <li><p>2018 FÄ für Orthopädie und Traumatologie</p></li>
               </ul>
             </div>
-            <div><img class="center shrink-image-on-mobile-70" src="images/undraw_online_cv.svg" alt="resume"></div>
+            <div><img class="center shrink-image-on-mobile-70 scroll-anim-opacity-0 scroll-anim-left" src="images/undraw_online_cv.svg" alt="resume"></div>
           </div>
         </div>
       </section>
@@ -88,7 +90,7 @@
       <section class="padding-block-900">
         <div class="container">
           <div class="even-columns flow" style="--flow-spacer: 1em">
-            <div class="center-on-mobile">
+            <div class="center-on-mobile scroll-anim-opacity-0 scroll-anim-left">
               <h2 class="fs-h2 fw-bold center-text-on-mobile">Qualifikationen</h2>
               <ul>
                 <li><p>Fachärztin für Orthopädie und Traumatologie</p></li>
@@ -100,7 +102,7 @@
                 <li class="fw-bold"><p>Deutsch, Englisch, Serbo-kroatisch, Kenntnisse in Spanisch</p></li>
               </ul>
             </div>    
-            <div><img class="center shrink-image-on-mobile-70" src="images/undraw_doctors.svg" alt="doctor-illustration"></div>      
+            <div><img class="center shrink-image-on-mobile-70 scroll-anim-opacity-0 scroll-anim-right" src="images/undraw_doctors.svg" alt="doctor-illustration"></div>      
           </div>
         </div>
       </section>
@@ -131,7 +133,7 @@
 
       <section class="padding-block-900" id="leistungen">
         <div class="container">
-          <div class="flow" style="--flow-spacer: 1em">
+          <div class="flow scroll-anim-opacity-0 scroll-anim-up" style="--flow-spacer: 1em">
             <h2 class="fs-h2 fw-bold center-text">Leistungen</h2>
               <ul>
                 <li><p data-width="wide">Hüftultraschall laut Mutter-Kind-Pass in der 1. und 6. – 8. Lebenswoche (für diese Untersuchung kann ich auch gerne auf Anfrage zu Ihnen nach Hause kommen), sowie die orthopädische Untersuchung des Säuglings in der 7. – 9. Lebenswoche</p></li>
@@ -141,7 +143,7 @@
                 <li><p data-width="wide">Schmerztherapie</p></li>
               </ul>   
           </div>
-          <div class="padding-block-300 flow" style="--flow-spacer: 1em">
+          <div class="padding-block-300 flow scroll-anim-opacity-0 scroll-anim-up" style="--flow-spacer: 1em">
             <p data-width="wide" class="border-300 bg-primary-2">
               Als Wahlärztin habe ich keinen Vertrag mit den Krankenkassen und somit werden meine Leistungen direkt verrechnet. Sie können bei Ihrer Krankenkasse eine Honorarnote einreichen und bekommen einen Teil des Betrags rückerstattet.
             </p>
@@ -156,7 +158,7 @@
         <div class="padding-horizontal-900">
           <div class="bg-neutral-900 image-border-300 center" style="max-width: 500px;">
             <a href="#"><img src="Sanja Savicic_Logopaket/Sanja Savicic_Bubbles/Sanja Savicic_Bubbles.svg"
-              alt="Bubble Türkis"></a> 
+              alt="Bubbles"></a> 
           </div> 
         </div> 
       </section>
@@ -164,10 +166,10 @@
       <section class="padding-block-900">
         <div class="container">
           <div class="even-columns">
-            <div>
+            <div class="scroll-anim-opacity-0 scroll-anim-left">
               <iframe class="responsive-iframe border-200 bg-primary-3" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d165.8245076958825!2d16.64409920734024!3d48.3183872!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476ce2b5d892803b%3A0xb68aff3d9b7caa0b!2sOrdination%20Dr.%20Philipp%20Balga!5e0!3m2!1sde!2sat!4v1669474091700!5m2!1sde!2sat" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
-            <div class="center-text">
+            <div class="center-text scroll-anim-opacity-0 scroll-anim-right">
               <div class="flow" style="--flow-spacer: 1em">
                 <h2 class="fs-h2 fw-bold">Kooperation</h2>
                 <ul role="list">
@@ -182,7 +184,7 @@
       </section>
 
       <section class="padding-block-900 bg-primary-3">
-        <div class="container flow center-text" style="--flow-spacer: 1em">
+        <div class="container flow center-text scroll-anim-opacity-0 scroll-anim-left" style="--flow-spacer: 1em">
           <h2 class="fs-h2 fw-bold">Ordinationszeit</h2>
           <ul role='list'>
             <li>Dientstag 8:00 – 12:00 & 17:00 – 19:00 Uhr</li>
@@ -192,21 +194,21 @@
       </section>
 
       <section class="padding-block-900 bg-primary-1 cta">
-        <div class="container">
+        <div class="container scroll-anim-opacity-0 scroll-anim-right">
           <div class="even-columns">
             <div>
               <p class="fs-h2 fw-bold text-neutral-900 center-text-on-mobile">Vereinbare jetzt deinen Termin</p>
             </div>
             <div class="center-text">
-              <a href="https://patient.latido.at/arzt/_Savicic" class="button push-right" data-type="inverted">Termin vereinbaren</a>  
+              <a href="https://patient.latido.at/arzt/_Savicic" class="button push-right grow-transition-10" data-type="inverted" style="display: inline-block">Termin vereinbaren</a>
             </div>
           </div>
         </div>
       </section>
     </main>
 
-    <footer class="padding-block-300" id="kontakt">
-      <div class="container">
+    <footer class="padding-block-300 fw-medium" id="kontakt">
+      <div class="container scroll-anim-opacity-0 scroll-anim-left">
         <div class="even-columns center-flex center-text grid-children">
           <!-- Social Media 
           <div>
@@ -218,21 +220,23 @@
             </ul>
           </div>
           -->
-          <a href="#top" class="remove-logo"><img class="center-on-mobile shrink-image-on-mobile-300" src="Sanja Savicic_Logopaket/Sanja Savicic_Logo/Sanja Savicic_Logo.svg" alt="Logo"></a>
-          <div>
+          <a href="#top" class="remove-logo grow-transition-10"><img class="center-on-mobile shrink-image-on-mobile-300" src="Sanja Savicic_Logopaket/Sanja Savicic_Logo/Sanja Savicic_Logo.svg" alt="Logo"></a>
+          <div class="grow-transition-5">
             <i class="fa-solid fa-phone"></i>
             <div>
-              <a href="tel:066475042109" class="text-hover-primary-1 text-neutral-100">0664/7504-2109</a>
-              <p data-width="wide">Mo – Fr | 9:00 – 12:00 Uhr</p>
+              <a href="tel:066475042109" class="text-hover-primary-1 text-neutral-100">               
+                <p data-width="wide">0664/7504-2109</p>
+                <p data-width="wide">Mo – Fr | 9:00 – 12:00 Uhr</p>
+              </a>  
             </div> 
-          </div>         
-          <div>
+          </div>    
+          <div class="grow-transition-5">
             <i class="fa-solid fa-envelope"></i>
             <a href="mailto:orthopaedie@savicic.at" class="text-hover-primary-1 text-neutral-100">orthopaedie@savicic.at</a>
           </div>
-          <div>
+          <div class="grow-transition-5">
             <i class="fa-solid fa-location-dot"></i>
-            <a href="https://www.google.com/maps?ll=48.318387,16.644236&z=19&t=m&hl=de&gl=AT&mapclient=embed&cid=13153606301755681291" class="text-hover text-neutral-100">Amundsenstraße 44,<br>2231 Strasshof</a>
+            <a href="https://www.google.com/maps?ll=48.318387,16.644236&z=19&t=m&hl=de&gl=AT&mapclient=embed&cid=13153606301755681291" class="text-hover-primary-1 text-neutral-100">Amundsenstraße 44,<br>2231 Strasshof</a>
           </div>
           <div>
             <a href="impressum.html" class="text-hover-primary-1 fs-copyright text-neutral-100">Impressum</a>
