--- a/impressum.html
+++ b/impressum.html
@@ -92,13 +92,13 @@
             <a href="https://www.google.com/maps?ll=48.318387,16.644236&z=19&t=m&hl=de&gl=AT&mapclient=embed&cid=13153606301755681291" class="text-hover-neutral-900 text-neutral-100">Amundsenstraße 44,<br>2231 Strasshof</a>
           </div>
           <div>
-            <div class="fs-copyright">© Copyright 2022<br>Alle Rechte vorbehalten.</div>
+            <div class="fs-copyright">© Copyright 2022<br>Alle Rechte vorbehalten</div>
           </div>
         </div>
       </div>
     </footer>
 
-    <script type="module" src="https://davidkrstevski.github.io/orthopaedie-savicic.github.io/main.js"></script>
+    <script type="module" src="main.js"></script>
     <script src="https://kit.fontawesome.com/74e303cdc4.js" crossorigin="anonymous"></script>
   </body>
 </html>
