--- a/index.html
+++ b/index.html
@@ -240,13 +240,13 @@
           </div>
           <div>
             <a href="impressum.html" class="text-hover-primary-1 fs-copyright text-neutral-100">Impressum</a>
-            <div class="fs-copyright">© Copyright 2022<br>Alle Rechte vorbehalten.</div>
+            <div class="fs-copyright">© Copyright 2022<br>Alle Rechte vorbehalten</div>
           </div>
         </div>
       </div>
     </footer>
 
-    <script type="module" src="https://orthopaedie-savicic.at/main.js"></script>
+    <script type="module" src="main.js"></script>
     <script src="https://kit.fontawesome.com/74e303cdc4.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   </body>
