--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
               <li><a href="#kontakt">Kontakt</a></li>
             </ul>
           </nav>
-          <a href="https://patient.latido.at/arzt/_Savicic" class="button hide-on-mobile grow-transition-10" data-type="inverted" style="width: auto;">Termin vereinbaren</a>     
+          <div class="scroll-anim-opacity-0 scroll-anim-right">
+            <a href="https://patient.latido.at/arzt/_Savicic" class="button hide-on-mobile grow-transition-10" data-type="inverted" style="width: auto;">Termin vereinbaren</a> 
+          </div>         
         </div>
       </div>
     </header>
@@ -46,14 +48,20 @@
       <section class="padding-block-900-small-top wave">
         <div class="container">
           <div class="even-columns">
-            <div class="flow center-on-mobile" style="--flow-spacer: 1em">
-              <h1 class="title text-neutral-900 fs-h1 fw-bold center-text-on-mobile scroll-anim-opacity-0 scroll-anim-left">Herzlich Willkommen in der Ordination<br>Dr. Sanja Savicic!</h1>
-              <p>Als Orthopädin, Kinderorthopädin und Traumatologin ist es mir wichtig, Ihnen die bestmögliche Betreuung anzubieten.</p>
-              <p>Dabei lege ich meinen Schwerpunkt nicht nur auf die Erkrankungen des Bewegungsapparates im Erwachsenenalter, sondern auch im speziellen auf die orthopädischen Krankheitsbilder im Säuglings-, Kinder- und Jugendalter. Als zweifache Mutter sind mir die Unsicherheiten und Sorgen der Eltern ein großes Anliegen.</p>
-              <p>Mein Ziel ist es, Ihnen ein weitgehend schmerzfreies Leben zu ermöglichen. Ich nehme mir für Sie Zeit und erkläre Ihnen ausführlich, welche Therapie ich Ihnen empfehle.</p>
-              <p>Des Weiteren biete ich Ihnen eine rasche Terminvergabe und kurze Wartezeiten in einem angenehmen Ambiente an.</p>
-              <p>Sie werden ausschließlich von mir betreut, keine Vertretungsärzte oder Lehrpraktikanten!</p>
-              <p class="fw-bold">Ich hoffe, Sie bald in meiner Ordination begrüßen zu dürfen!</p>
+            <div class="center-on-mobile" style="--flow-spacer: 1em">
+              <h1 class="text-neutral-900 fs-h1 fw-bold center-text-on-mobile scroll-anim-opacity-0 scroll-anim-left">
+                <p>Herzlich Willkommen</p>
+                <p>in der Ordination</p>
+                <p>Dr. Sanja Savicic!</p>
+              </h1>  
+              <div class="wave-gap flow" style="--flow-spacer: 1em">
+                <p>Als Orthopädin, Kinderorthopädin und Traumatologin ist es mir wichtig, Ihnen die bestmögliche Betreuung anzubieten.</p>
+                <p>Dabei lege ich meinen Schwerpunkt nicht nur auf die Erkrankungen des Bewegungsapparates im Erwachsenenalter, sondern auch im speziellen auf die orthopädischen Krankheitsbilder im Säuglings-, Kinder- und Jugendalter. Als zweifache Mutter sind mir die Unsicherheiten und Sorgen der Eltern ein großes Anliegen.</p>
+                <p>Mein Ziel ist es, Ihnen ein weitgehend schmerzfreies Leben zu ermöglichen. Ich nehme mir für Sie Zeit und erkläre Ihnen ausführlich, welche Therapie ich Ihnen empfehle.</p>
+                <p>Des Weiteren biete ich Ihnen eine rasche Terminvergabe und kurze Wartezeiten in einem angenehmen Ambiente an.</p>
+                <p>Sie werden ausschließlich von mir betreut, keine Vertretungsärzte oder Lehrpraktikanten!</p>
+                <p class="fw-bold">Ich hoffe, Sie bald in meiner Ordination begrüßen zu dürfen!</p>
+              </div>   
             </div>
             <div class="flow" style="--flow-spacer: 1em">
               <a href="#uebermich"><img style="max-width: 70%;" class="round-border center grow-transition-5" src="images/profilbild1_resized.jpg" alt="Dr. Sanja Savicic">
@@ -220,7 +228,7 @@
             </ul>
           </div>
           -->
-          <a href="#top" class="remove-logo grow-transition-10"><img class="center-on-mobile shrink-image-on-mobile-300" src="Sanja Savicic_Logopaket/Sanja Savicic_Logo/Sanja Savicic_Logo.svg" alt="Logo"></a>
+          <a href="#top" class="remove-logo"><img class="center-on-mobile shrink-image-on-mobile-300" src="Sanja Savicic_Logopaket/Sanja Savicic_Logo/Sanja Savicic_Logo.svg" alt="Logo"></a>
           <div class="grow-transition-5">
             <i class="fa-solid fa-phone"></i>
             <div>
@@ -238,9 +246,14 @@
             <i class="fa-solid fa-location-dot"></i>
             <a href="https://www.google.com/maps?ll=48.318387,16.644236&z=19&t=m&hl=de&gl=AT&mapclient=embed&cid=13153606301755681291" class="text-hover-primary-1 text-neutral-100">Amundsenstraße 44,<br>2231 Strasshof</a>
           </div>
-          <div>
-            <a href="impressum.html" class="text-hover-primary-1 fs-copyright text-neutral-100">Impressum</a>
-            <div class="fs-copyright">© Copyright 2022<br>Alle Rechte vorbehalten</div>
+          <div class="fs-copyright">
+            <a href="impressum.html" class="text-hover-primary-1 text-neutral-100 grow-transition-10" style="display: inline-block">Impressum</a>
+            <div>© Copyright 2022<br>Alle Rechte vorbehalten</div>
+            <div>
+              Made by:
+              <br>
+              <a href="krstevski.designs@gmail.com" class="text-hover-primary-1 text-neutral-100 grow-transition-10" style="display: inline-block">David Krstevski</a>
+            </div>
           </div>
         </div>
       </div>
